--- a/public/translations/locales/en.json
+++ b/public/translations/locales/en.json
@@ -4,5 +4,6 @@
   "about_description": "Some information about us.",
   "about_us": "About Us",
   "home": "Home",
-  "welcome_home": "Welcome to the Home Page!"
+  "welcome_home": "Welcome to the Home Page!",
+  "welcome.description_text": ""
 }
