update lang source

--- a/public/translations/locales/en.json
+++ b/public/translations/locales/en.json
@@ -1,6 +1,6 @@
 {
   "about": "About",
-  "about_cta": "",
+  "about_cta": "Click me",
   "about_description": "Some information about us.",
   "about_us": "About Us",
   "home": "Home",
