--- a/public/translations/locales/en.json
+++ b/public/translations/locales/en.json
@@ -5,5 +5,6 @@
   "about_us": "About Us",
   "home": "Home",
   "welcome_home": "Welcome to the Home Page!",
+  "welcome.cta": "",
   "welcome.description_text": ""
 }
