--- a/public/translations/locales/en.json
+++ b/public/translations/locales/en.json
@@ -6,5 +6,6 @@
   "home": "Home",
   "welcome_home": "Welcome to the Home Page!",
   "welcome.cta": "",
+  "welcome.cta-2": "",
   "welcome.description_text": ""
 }
